fix: Fix layout margin/padding collapsing in footer

--- a/docs/resources/site.styles/styles.css
+++ b/docs/resources/site.styles/styles.css
@@ -188,5 +188,6 @@ body[data-site-page-path="zh-Hant"] .site-first-heading {
 }
 
 .site-footer {
+    display: flow-root;
     border-top: 5px var( --border-color-header-footer, #08c ) solid;
 }
